[project]
name = "downward-api"
version = "0.1.0"
description = "A Flask app demonstrating Kubernetes Downward API"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "flask==2.3.3",
    "gunicorn==21.2.0"
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"